--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
         <h1>안녕하세요!</h1>
         <p>메인 페이지에 오신 것을 환영합니다.</p>
-        <a href="/">메인 페이지로 이동</a>
-        <a href="/about">소개 페이지로 이동</a>
-        <a href="/contact">연락처 페이지로 이동</a>
+        <a href="/test/">메인 페이지로 이동</a>
+        <a href="/test/about">소개 페이지로 이동</a>
+        <a href="/test/contact">연락처 페이지로 이동</a>
     </body>
 </html>
